# benchcompress

./: .gitignore  .pre-commit-config.yaml  README.md  compress_ints_lossless.py  helpers.py  load_real.py  test1.py
benchcompress/: MANIFEST.in  README.md  pyproject.toml  setup.py
benchcompress/src/benchcompress/: _analysis.py  _compress_ints_lossless.py  _data_loaders.py  cli.py  run_benchmarks.py
benchcompress/src/benchcompress/algorithms/: __init__.py
benchcompress/src/benchcompress/algorithms/ans/: CMakeLists.txt  __init__.py  ans.md  get_run_lengths.cpp  get_run_lengths.hpp  get_run_lengths.py  markov_predict.cpp  markov_predict.hpp  markov_predict.py  markov_reconstruct.cpp  markov_reconstruct.hpp  markov_reconstruct.py
benchcompress/src/benchcompress/algorithms/brotli/: __init__.py  brotli.md
benchcompress/src/benchcompress/algorithms/bzip2/: __init__.py  bzip2.md
benchcompress/src/benchcompress/algorithms/lz4/: __init__.py  lz4.md
benchcompress/src/benchcompress/algorithms/lzma/: __init__.py  lzma.md
benchcompress/src/benchcompress/algorithms/simple_ans/: CMakeLists.txt  __init__.py  get_run_lengths.cpp  get_run_lengths.py  markov_predict.py  markov_reconstruct.cpp  markov_reconstruct.py
benchcompress/src/benchcompress/algorithms/zlib/: __init__.py  zlib.md
benchcompress/src/benchcompress/algorithms/zstd/: __init__.py  zstd.md
benchcompress/src/benchcompress/datasets/: __init__.py
benchcompress/src/benchcompress/datasets/bernoulli/: __init__.py  bernoulli.md
benchcompress/src/benchcompress/datasets/ecephys/: __init__.py  ecephys.md
benchcompress/src/benchcompress/datasets/electrophysiology/: __init__.py  electrophysiology.md
benchcompress/src/benchcompress/datasets/fmri/: __init__.py  fmri.md
benchcompress/src/benchcompress/datasets/gaussian/: __init__.py  gaussian.md
benchcompress/src/benchcompress/datasets/ieeg/: __init__.py  ieeg.md
benchcompress/src/benchcompress/datasets/real/: __init__.py
benchcompress/src/benchcompress/datasets/seismic/: __init__.py  explore_seismic.py  seismic.md
benchcompress/src/benchcompress/run_benchmarks/: _memobin.py  benchmark_timing.py  collect_info.py  is_compatible.py  run_benchmarks.py
benchmark_results/: results.json
devel/: check_format.sh  compile_markov_bench_cpp.sh  compile_paper.sh  copy_paper_to_web.sh  format_code.sh  generate_posts_index.sh  markov_bench.cpp  markov_bench.py  prepare_lim_et_al_2024.py
paper/: README.md  ieee.csl  paper.md  paper.yml  references.bib
zia_benchmark/: README.md  pyproject.toml  setup.py  test_markov_reconstruct.py
zia_benchmark/src/zia/: _analysis.py
zia_benchmark/src/zia_benchmark/: __init__.py  _compress_ints_lossless.py  _memobin.py  cli.py  run_benchmarks.py
zia_benchmark/src/zia_benchmark/algorithms/: __init__.py
zia_benchmark/src/zia_benchmark/algorithms/brotli/: __init__.py
zia_benchmark/src/zia_benchmark/algorithms/lzma/: __init__.py
zia_benchmark/src/zia_benchmark/algorithms/simple_ans/: CMakeLists.txt  __init__.py  markov.py  markov_predict.cpp  markov_reconstruct.cpp
zia_benchmark/src/zia_benchmark/algorithms/zlib/: __init__.py
zia_benchmark/src/zia_benchmark/algorithms/zstd/: __init__.py
zia_benchmark/src/zia_benchmark/datasets/: __init__.py
zia_benchmark/src/zia_benchmark/datasets/bernoulli/: __init__.py
zia_benchmark/src/zia_benchmark/datasets/gaussian/: __init__.py
zia_benchmark/src/zia_benchmark/datasets/real/: __init__.py
(+51 files in other folders)
