[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.11.1"]
build-backend = "scikit_build_core.build"

[project]
name = "zia_benchmark"
version = "0.1.0"
description = "Benchmarking compression methods for numeric arrays"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jeremy Magland" }
]
dependencies = [
    "numpy",
    "scipy",
    "zstandard",
    "simple_ans",
    "requests",
    "lindi",
    "brotli",
    "click",
    "numba",
    "pybind11>=2.11.1"
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.source-dir = "src/zia_benchmark/algorithms/simple_ans"
cmake.build-type = "Release"
wheel.packages = ["src/zia_benchmark"]

[project.scripts]
zia-benchmark = "zia_benchmark.cli:main"
